--- a/logout.html
+++ b/logout.html
@@ -5,20 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logout</title>
     <style>
-        body{
-            background-color:antiquewhite;
-            display: grid;
-            text-decoration:none;
-            text-align: center;
-            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        body {
+            background-color: #f8f1e7;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
 
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 300px;
+        }
+
+        h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
+        }
+
+        p {
+            font-size: 14px;
+            margin-bottom: 20px;
+            color: #666;
+        }
+
+        button {
+            background-color: #5c85d6;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #466bbf;
         }
     </style>
 </head>
 <body>
-    <h2>Logout</h2>
-    <form action="logout.php" method="post">
-        <button type="submit">Logout</button>
-    </form>
+    <div class="container">
+        <h2>Logout</h2>
+        <p>Are you sure you want to logout? You will need to login again to access your account.</p>
+        <form action="logout.php" method="post">
+            <button type="submit">Logout</button>
+        </form>
+    </div>
 </body>
 </html>
